--- a/src/index.css
+++ b/src/index.css
@@ -102,7 +102,7 @@ a {
   margin-top: 10px;
   width: 354px;
   height: 48px;
-  background-color: #bac2c3;
+  background-color: #5acdbd;
   border-radius: 3px;
   font-size: 16px;
 }
@@ -111,14 +111,19 @@ a {
   cursor: pointer;
 }
 
+.cart-quantity {
+  border-radius: 50%;
+  border: solid 2px #5acdbd;
+}
+
 .cart-content {
   margin: auto;
 }
 
 .cart-items {
+  margin: 10px 10px;
   list-style: none;
   display: flex;
-  justify-content: space-around;
 }
 
 .menu-list {
