--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
+@import "./fonts/stylesheet.css";
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "IBM Plex Sans";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f4f5f5;
@@ -16,7 +16,14 @@ header {
 }
 
 h2 {
+  font-family: "Stratos Deliveroo Web";
   margin: 0px 0px;
+  font-size: 28px;
+}
+
+h3 {
+  font-size: 16px;
+  line-height: 22px;
 }
 
 a {
@@ -37,6 +44,14 @@ a {
 .container-nav {
   background-color: #ffffff;
   width: 100%;
+}
+.fixedNav {
+  background-color: #ffffff;
+  width: 100%;
+  position: sticky;
+  top: 0px;
+  right: 10px;
+  z-index: 1;
 }
 
 .logo {
@@ -89,13 +104,32 @@ a {
 
 .cart {
   width: 370px;
-  height: 200px;
+  margin-top: 10px;
+  height: auto;
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
   align-content: center;
   text-align: center;
   align-items: center;
+  padding: 10px;
+  box-shadow: 0px 4px 6px grey;
+}
+
+.fixedCart {
+  width: 370px;
+  height: auto;
+  position: sticky;
+  top: 50px;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  text-align: center;
+  align-items: center;
+  z-index: 2;
+  padding: 10px;
+  box-shadow: 0px 4px 6px grey;
 }
 
 .cart-button {
@@ -111,9 +145,8 @@ a {
   cursor: pointer;
 }
 
-.cart-quantity {
-  border-radius: 50%;
-  border: solid 2px #5acdbd;
+.quant-icon {
+  height: 15px;
 }
 
 .cart-content {
@@ -124,6 +157,29 @@ a {
   margin: 10px 10px;
   list-style: none;
   display: flex;
+  justify-content: space-between;
+}
+
+.item {
+  padding: 5px;
+}
+
+.sous-total {
+  border-top: 1px solid #5acdbd;
+  padding: 5px;
+}
+
+.livraison {
+  display: flex;
+  justify-content: space-between;
+}
+
+.total {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px;
+  border-top: 3px solid #5acdbd;
+  font-weight: 700;
 }
 
 .menu-list {
